Prevent date and time from overlapping on small screens

--- a/src/domain/event/eventOccurrence.module.scss
+++ b/src/domain/event/eventOccurrence.module.scss
@@ -25,7 +25,7 @@ tr {
   tr {
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: auto;
+    grid-template-columns: auto 1fr 1fr auto;
     grid-row-gap: $basePadding;
     padding: 1rem 0;
   }
@@ -41,11 +41,11 @@ tr {
   }
   td.occurrenceDate {
     grid-row: 2;
-    grid-column: 1 / span 2;
+    grid-column: 1;
   }
   td.occurrenceTime {
     grid-row: 2;
-    grid-column: 2 / span 2;
+    grid-column: 2;
   }
   td.occurrenceSubmit {
     grid-column: 1 / span 4;
